--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -138,6 +138,45 @@
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
 <tr>
 <td>
+<table class="dm">
+<tbody>
+<tr>
+<td class="amount">150g</td>
+<td class="title">Kachní škvarková pomazánka se škvarky, naše zázvorové okurky,
+		u nás dělaný rozmarýnový chléb 1ab</td>
+<td class="pricem">165 Kč</td>
+</tr>
+<tr>
+<td class="amount"></td>
+<td class="title">Valašská kyselica s mačkanými brambory s cibulkou
+		a zakysanou smetanou 1a,7,12</td>
+<td class="pricem">69 Kč</td>
+</tr>
+<tr>
+<td class="amount">500g</td>
+<td class="title">Konfitované hovězí žebro se silnou šťávou, restovanou
+		zeleninou se žampiony, hořčicí, křenem a naším cibulovým
+		chlebem 1a,9,10</td>
+<td class="pricem">239 Kč</td>
+</tr>
+<tr>
+<td class="amount">250g</td>
+<td class="title">Grilovaná krkovice IBERICO s ragú z lišek a pečenými
+		brambory Grenaille 1a,7,9</td>
+<td class="pricem">259 Kč</td>
+</tr>
+<tr>
+<td class="amount"></td>
+<td class="title">Smažené hrušky v těstíčku se skořicovým cukrem, zakysanou
+		smetanou, meruňkovým pyré a oříškovým griliášem 1a,3,7,8</td>
+<td class="pricem">89 Kč</td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td>
 <table class="dm"><tr><td class="amount"> </td><td class="title">Pikantní hovězí PHO s koriandrem a chilli s vaječnými nudlemi 1a,3,6,9</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">1/4</td><td class="title">Pečené kuřecí stehno alá bažant s červeným zelím a bramborovými knedlíky 1a,3,12</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Grilovaná vepřová krkovička s barbecue omáčkou, zelenými fazolkami s anglickou slaninou a americkými brambory 1a,7</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Zeleninový salát s krůtím masem, dijonskou majonézou a rozpečenou bagetou 1a,3,7,10</td><td class="pricem">129 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
